Fixed overlapping of menu text

--- a/src/app/components/dotnav/dotnav.component.scss
+++ b/src/app/components/dotnav/dotnav.component.scss
@@ -23,6 +23,10 @@
 
   transform: rotate(90deg);
   transform-origin: left;
+
+  user-select: none;
+
+  z-index: -10;
 }
 
 .dotnav > span {
